# mallama

./: .SRCINFO  LICENSE  MANIFEST.in  PKGBUILD  README.md  app.py  ollama-webui.service  pyproject.toml  requirements.txt  setup.py
conversations/: conv_20260216_151930_13e7aa73.json  conv_20260216_151952_acdcad50.json  conv_20260216_152036_f139ed10.json  conv_20260216_195927_4887cfaa.json  conv_20260216_195938_add052ec.json  conv_20260216_200029_2a27eb02.json  conv_20260216_200044_e864925c.json
mallama/: __init__.py  app.py
mallama/static/: app.js  style.css
mallama/templates/: index.html
ollama_webui/: __init__.py  __main__.py  app.py
static/: app.js  style.css
templates/: index.html
