[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-webui"
version = "0.1.0"
description = "A beautiful web interface for Ollama with conversation management and markdown support"
readme = "README.md"
authors = [
    {name = "Masoud Gholypour", email = "masoudgholypour2000@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask>=2.0.0",
    "requests>=2.28.0",
    "werkzeug>=2.0.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/ollama-webui"
Repository = "https://github.com/yourusername/ollama-webui.git"
Issues = "https://github.com/yourusername/ollama-webui/issues"

[project.scripts]
ollama-webui = "ollama_webui.__main__:main"